feat: better logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=poc-transcribe
 
 spring.ai.openai.api-key=${KEY}
 spring.ai.openai.transcription.api-key=${KEY}
+spring.output.ansi.enabled=ALWAYS
