--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=poc-transcribe
 spring.ai.openai.api-key=${KEY}
 spring.ai.openai.transcription.api-key=${KEY}
 spring.output.ansi.enabled=ALWAYS
+management.endpoints.web.exposure.include=metrics,prometheus
